# Robossis-xvr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ruff.yml
RXVR-1.0/: Model Evaluation.ipynb  README.md  RXVR1.0_training.pth
RXVR-1.0/Data with 0.310547 pixel spacing/: 1436x1436 prox pose.pt  256x256 prox.dcm  512x512 fiducials.pt  768x768 prox.dcm
RXVR-1.0/Data with 2.17 pixel spacing/: 1000X1000 prox.dcm  1436x1436 prox fiducials.pt  1436x1436 prox.dcm  256x256 prox pose.pt  768x768 prox pose.pt
RXVR-1.0/RXVR-1.0/: Femur_X-Ray_Generator.py  Finetuned_Patient-Agnostic.pth
RXVR-1.0/SE000002.nii/: SE000002.nii
RXVR-1.1/: CT-Data_and_ModelPath_URLs.txt  README.md  RXVR1.1-2D_3D Registration.docx  RXVR1.1_ModelEvaluation.ipynb  RXVR1.1_Registration.ipynb  RXVR1.1_Training.ipynb
RXVR-1.1/C-Arm-X-ray-DCM/: distal.dcm  mid-shaft.dcm  proximal.dcm  proximal_resampled.dcm  upper-shaft.dcm
RXVR-1.1/C_Arm/: distal.dcm  proximal.dcm  upper-shaft.dcm
RXVR-1.1/checkpoint_finetuned/: RXVR1.1_Finetuned_0008.pth  RXVR1.1_Finetuned_0009.pth
RXVR-1.1/checkpoint_trained/: RXVR1.1_best.pth
RXVR-1.2/: Femur_X-Ray_Generator.py  Model Evaluation.ipynb  README.md  RXVR1.2_Finetuning.ipynb
Robossis-Results/: CT-Data_and_ModelPath_URLs.txt  Femur_X-Ray_Generator.py
Robossis-Results/Data with 0.310547 pixel spacing/: 1000x1000 prox fiducials.pt  1000x1000 prox.dcm  256x256 prox fiducials.pt  512x512 prox pose.pt  768x768 prox pose.pt  896x896 prox.dcm
Robossis-Results/Data with 2.17 pixel spacing/: 1000X1000 prox pose.pt  1000x1000 prox fiducials.pt  128x128 prox fiducials.pt  128x128 prox pose.pt  (+1 more)
Vivik-xvr/: LICENSE  README.md  pyproject.toml
utils/: dcmwrite.py
xvr/: cli.py  dicom.py  load.py  metrics.py  model.py  registrar.py  renderer.py  utils.py
(+140 files in other folders)
