[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xvr"
dynamic = ["version"]
dependencies = [
    "click>=8.1",
    "diffdrr>=0.5.0rc0",
    "pytorch_transformers",
    "antspyx",
    "pydicom",
    "gdcm",
    "pylibjpeg",
    "pylibjpeg-libjpeg",
]
requires-python = ">=3.10"
authors = [{name = "Vivek Gopalakrishnan", email = "vivekg@mit.edu"}]
maintainers = [{name = "Vivek Gopalakrishnan", email = "vivekg@mit.edu"}]
description = "Differentiable 2D/3D X-ray to volume registration"
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
xvr = "xvr.cli:cli"

[project.urls]
Repository = "https://github.com/eigenvivek/xvr"
Issues = "https://github.com/eigenvivek/xvr/issues"

[tool.hatch.version]
path = "xvr/__init__.py"

[tool.ruff]
extend-exclude = ["*.ipynb"]
